# openvpn-ldap-auth

./: .gitignore  .hgignore  .hgtags  Changelog  README  TODO  UPGRADE-from-0.0.X.txt  config.h.in  configure.in  libtool
src/: Makefile.am  action.c  action.h  auth-ldap.c  client_context.c  client_context.h  cnf.c  cnf.h  debug.c  debug.h  defines.h  la_ldap.c  la_ldap.h  ldap-auth.c  ldap_profile.c  ldap_profile.h  list.c  list.h  openvpn-ldap-rules.c  types.h  utils.c  utils.h
test/: config.conf
tests/: Makefile.am  config.conf  openvpn-ldap-auth-test.c  openvpn-ldap-search.c  ovpn.schema  testplugin.c
