m4_define([openvpnldapauth_version_major],[0])
m4_define([openvpnldapauth_version_minor],[0])
m4_define([openvpnldapauth_version_micro],[4])
m4_define([openvpnldapauth_version_extra],[beta1])
m4_define([openvpnldapauth_version],[openvpnldapauth_version_major().openvpnldapauth_version_minor().openvpnldapauth_version_micro()openvpnldapauth_version_extra()])

AC_INIT([OpenVPN LDAP Auth],[openvpnldapauth_version()],[chantra@debuntu.org],[openvpn-ldap-auth])
AM_INIT_AUTOMAKE([1.9 foreign no-dist-gzip dist-bzip2])

AC_CONFIG_SRCDIR([Makefile.am])
AM_CONFIG_HEADER([config.h])

AM_INIT_AUTOMAKE([$PACKAGE], [$VERSION])

AC_PROG_LIBTOOL
dnl AC_PROG_RANLIB
dnl LT_INIT
AC_CONFIG_MACRO_DIR([m4])
AC_PROG_CC

CFLAGS="${CFLAGS} -g -Wall -Werror -D_FILE_OFFSET_BITS=64"

AC_SUBST(CFLAGS)

AC_CHECK_HEADER([ldap.h],
        [AC_CHECK_LIB(ldap, [ldap_initialize])],
        [AC_MSG_ERROR("ldap headers not found")])

AC_CHECK_HEADER([pthread.h],
      [AC_CHECK_LIB(pthread, [pthread_create])],
      [AC_MSG_ERROR("pthread headers not found")])

AC_PROG_INSTALL
AC_OUTPUT( Makefile src/Makefile tests/Makefile )

