m4_define([openvpnldapauth_version_major],[0])
m4_define([openvpnldapauth_version_minor],[0])
m4_define([openvpnldapauth_version_micro],[6])
m4_define([openvpnldapauth_version_extra],[])
m4_define([openvpnldapauth_version],[openvpnldapauth_version_major().openvpnldapauth_version_minor().openvpnldapauth_version_micro()openvpnldapauth_version_extra()])

AC_INIT([OpenVPN LDAP Auth],[openvpnldapauth_version()],[chantra@debuntu.org],[openvpn-ldap-auth])
AM_INIT_AUTOMAKE([1.9 foreign no-dist-gzip dist-bzip2])

AC_CONFIG_SRCDIR([Makefile.am])
AM_CONFIG_HEADER([config.h])

AM_INIT_AUTOMAKE([$PACKAGE], [$VERSION])

AC_PROG_LIBTOOL
dnl AC_PROG_RANLIB
dnl LT_INIT
AC_CONFIG_MACRO_DIR([m4])
AC_PROG_CC

CFLAGS="${CFLAGS} -g -Wall -Werror"
AC_SUBST(CFLAGS)

AC_ARG_ENABLE(ldapuserconfig,
   [  --disable-ldapuserconfig, Disable user ldap settings],
   [LDAP_USER_CONF="$enableval"],
   [LDAP_USER_CONF="yes"]
)

dnl enable ldapuserconfig
if test "$LDAP_USER_CONF" = "yes"; then
  AC_DEFINE(ENABLE_LDAPUSERCONF, 1, [Enable user ldap settings])
fi

AC_CHECK_HEADER([ldap.h],
        [AC_CHECK_LIB(ldap, [ldap_initialize])],
        [AC_MSG_ERROR("ldap headers not found")])

AC_CHECK_HEADER([lber.h],
        [AC_CHECK_LIB(lber, [ber_free])],
        [AC_MSG_ERROR("lber headers not found")])

AC_CHECK_HEADER([pthread.h],
      [AC_CHECK_LIB(pthread, [pthread_create])],
      [AC_MSG_ERROR("pthread headers not found")])

AC_CHECK_HEADERS([syslog.h])


AC_PROG_INSTALL
AC_OUTPUT( Makefile src/Makefile tests/Makefile )

echo "
Configuration:

   Source code location:                              ${srcdir}
   Lib install dir:                                   ${prefix}/lib
   Compiler:                                          ${CXX}

   LDAP user conf:                                    ${LDAP_USER_CONF}
"
